semoss-localmaster.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: semoss-localmaster
  namespace: healthcarex-demo
  labels:
    app.kubernetes.io/name: semoss-localmaster
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: semoss-localmaster
  template:
    metadata:
      labels:
        app.kubernetes.io/name: semoss-localmaster
    spec:
      volumes:
        - name: localmaster-volume
          persistentVolumeClaim:
            claimName: localmaster-volume
      containers:
        - name: semoss-localmaster
          image: 'oscarfonts/h2:1.4.199'
          ports:
            - name: 1521tcp2
              containerPort: 1521
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: localmaster-volume
              mountPath: /opt/h2-data
          imagePullPolicy: IfNotPresent
