semoss-pod.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: semoss-pod
  namespace: healthcarex-demo
  labels:
    app.kubernetes.io/name: semoss-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: semoss-pod
  template:
    metadata:
      labels:
        app.kubernetes.io/name: semoss-pod
    spec:
      imagePullSecrets:
      - name: docker-semoss-org
      containers:
        - name: semoss
          image: 'docker.semoss.org/healthcarex/hcx:12-19-2020-updatedIcon2'
          command:
            - /bin/bash
          args:
            - '-c'
            - >-
              git reset --hard; git pull; chmod 777 *;
              /opt/semoss-artifacts/artifacts/scripts/runCS.sh
          ports:
            - name: 8080tcp00
              containerPort: 8080
              protocol: TCP
          resources: {}
          livenessProbe:
            httpGet:
              path: /Monolith/api/config
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /Monolith/api/config
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          imagePullPolicy: Always
