semoss-container-native-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: semoss-container-native-lb # Name of Service
  annotations:
    cloud.google.com/neg: '{"ingress": true}' # Creates a NEG after an Ingress is created
spec: # Service's specification
  type: ClusterIP
  selector:
    app.kubernetes.io/name: semoss-pod 
  ports:
  - port: 8080 # Service's port
    protocol: TCP
    targetPort: 8080
